syntax = "proto3";

option go_package="cluster";

package cluster;

message Event {
    bytes id = 1;
    bytes stream = 2;
    uint32 version = 3;
    string type = 4;
    bytes data = 5;
    bytes metadata = 6;
    bytes causation_id = 7;
    bytes correlation_id = 8;
    int64 added_at = 9;
}

message Stream {
    bytes id = 1;
    repeated bytes events = 2;
    int64 added_at = 3;
}

message AddCommand {
    message Event {
        string type = 1;
        bytes data = 2;
        bytes metadata = 3;
        bytes causation_id = 4;
        bytes correlation_id = 5;
    }
    bytes stream = 1;
    uint32 version = 2;
    repeated Event events = 3;
}

message ApplyLog {
    oneof Command {
        AddCommand add = 1;
    }
}